implement field initialization for all primitive and wrapper types